--- a/tox.ini
+++ b/tox.ini
@@ -15,9 +15,19 @@ install_command =
   pip install --allow-unverified python-apt {opts} {packages}
 commands = ostestr {posargs}
 whitelist_externals = juju
-passenv = HOME TERM AMULET_* CS_API_*
+passenv = HOME TERM VAULT_CHARM_DIR AMULET_* CS_API_*
+
+[testenv:functest-ha]
+basepython = python3.6
+deps = -r{toxinidir}/test-requirements.txt
+commands = {toxinidir}/tests/deploy.py --hamode etcd
 
 [testenv:functest]
 basepython = python3.6
 deps = -r{toxinidir}/test-requirements.txt
-commands = {toxinidir}/tests/deploy.py --hamode etcd
+commands = {toxinidir}/tests/deploy.py
+
+[testenv:functest-mysql]
+basepython = python3.6
+deps = -r{toxinidir}/test-requirements.txt
+commands = {toxinidir}/tests/deploy.py --database mysql
